add ftc
